--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -1,236 +1,170 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-  }
-  .sidebar {
-    position: fixed;
-    top: 71.2px ;
-    left: 0;
-    height: 100%;
-    width: 78px;
-    background: #ffff;
-    z-index: 100;
-    transition: all 0.5s ease;
-  }
-  .sidebar:hover {
-    width: 260px;
-  }
-  .sidebar .nav-links {
-    height: 100%;
-    padding: 0px 0 150px 0;
-    
-    overflow: auto;
-  }
-  .sidebar.close .nav-links {
-    overflow: visible;
-  }
-  .sidebar .nav-links::-webkit-scrollbar {
-    display: none;
-  }
-  .sidebar .nav-links li {
-    position: relative;
-    list-style: none;
-    transition: all 0.4s ease;
-  }
-  .sidebar .nav-links li:hover {
-    background: #f3f1f6;
-  }
-  .sidebar .sub-menu li:hover {
-    background: none;
-    color: #f06d03;
-  }
-  .sidebar .nav-links li .icon-link {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .sidebar.close .nav-links li .icon-link {
-    display: block;
-  }
-  .sidebar .nav-links li i {
-    height: 50px;
-    min-width: 78px;
-    text-align: center;
-    line-height: 50px;
-    color: #f06d03;
-    font-size: 20px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-  }
-  .sidebar .nav-links li.showMenu i.arrow {
-    transform: rotate(-180deg);
-  }
-  .sidebar.close .nav-links i.arrow {
-    display: none;
-  }
-  .sidebar .nav-links li a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-  }
-  .sidebar .nav-links li a .link_name {
-    font-size: 18px;
-    font-weight: 400;
-    color: #f06d03;
-    transition: all 0.4s ease;
-  }
-  .sidebar.close .nav-links li a .link_name {
-    opacity: 0;
-    pointer-events: none;
-  }
-  .sidebar .nav-links li .sub-menu {
-    padding: 6px 6px 14px 80px;
-    margin-top: 0px;
-    background: #fff;
-    display: none;
-  }
-  .sidebar .nav-links li.showMenu .sub-menu {
-    display: block;
-  }
-  .sidebar .nav-links li .sub-menu a {
-    color: #f06d03;
-    font-size: 15px;
-    padding: 5px 0;
-    white-space: nowrap;
-    opacity: 0.6;
-    transition: all 0.3s ease;
-  }
-  .sidebar .nav-links li .sub-menu a:hover {
-    opacity: 1;
-  }
-  .sidebar.close .nav-links li .sub-menu {
-    position: absolute;
-    left: 100%;
-    top: -10px;
-    margin-top: 0;
-    padding: 10px 20px;
-    border-radius: 0 6px 6px 0;
-    opacity: 0;
-    display: block;
-    pointer-events: none;
-    transition: 0s;
-  }
-  .sidebar.close .nav-links li:hover .sub-menu {
-    top: 0;
-    opacity: 1;
-    pointer-events: auto;
-    transition: all 0.4s ease;
-  }
-  .sidebar .nav-links li .sub-menu .link_name {
-    display: none;
-  }
-  .sidebar.close .nav-links li .sub-menu .link_name {
-    font-size: 18px;
-    opacity: 1;
-    display: block;
-  }
-  .sidebar .nav-links li .sub-menu.blank {
-    opacity: 1;
-    pointer-events: auto;
-    padding: 3px 20px 6px 16px;
-    opacity: 0;
-    pointer-events: none;
-  }
-  .sidebar .nav-links li:hover .sub-menu.blank {
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  .sidebar .profile-details {
-    position: fixed;
-    bottom: 0;
-    width: 260px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: #f3f1f6;
-    padding: 12px 0;
-    transition: all 0.5s ease;
-  }
-  .sidebar.close .profile-details {
-    background: none;
-  }
-  .sidebar.close .profile-details {
-    width: 78px;
-  }
-  .sidebar .profile-details .profile-content {
-    display: flex;
-    align-items: center;
-  }
-  .sidebar .profile-details img {
-    height: 52px;
-    width: 52px;
-    object-fit: cover;
-    border-radius: 16px;
-    margin: 0 14px 0 12px;
-    background: #1d1b31;
-  }
+
+@import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
+
+@import url(https://fonts.googleapis.com/css?family=Titillium+Web:300);
+
+@import url('https://fonts.googleapis.com/css2?family=Capriola&family=Oregano&display=swap');
+
+
+
+/* ScrolBar  */
+.scrollbar {
+
+  height: 90%;
+  width: 100%;
+  overflow-y: hidden;
+  overflow-x: hidden;
+}
+
+.scrollbar:hover {
+
+  height: 90%;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+/* Scrollbar Style */
+
+
+
+#style-1::-webkit-scrollbar-track {
+  border-radius: 2px;
+}
+
+#style-1::-webkit-scrollbar {
+  width: 5px;
+  background-color: #F7F7F7;
+}
+
+#style-1::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  background-color: #BFBFBF;
+}
+
+/* Scrollbar End */
+
+
+
+
+
+
+
+
+
+.main-menu:hover,
+nav.main-menu.expanded {
+  width: 200px;
+  overflow: hidden;
+  opacity: 1;
+
+}
+
+.main-menu {
+  background: #ffffff;
+  position: absolute;
+  top: 70px;
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  width: 55px;
+  overflow: hidden;
+  -webkit-transition: width .2s linear;
+  transition: width .2s linear;
+  -webkit-transform: translateZ(0) scale(1, 1);
+  box-shadow: 1px 0 15px rgba(0, 0, 0, 0.07);
+  opacity: 1;
+  z-index: 1;
+}
+
+.main-menu .scrollbar ul li a:hover {
+  background-color: #f06d03;
+  color: #fff;
   
-  .sidebar .profile-details .profile_name,
-  .sidebar .profile-details .job {
-    color: #f06d03;
-    font-size: 18px;
-    font-weight: 500;
-    white-space: nowrap;
-    transition: all 5s ease;
-  }
-  .sidebar.close .profile-details i,
-  .sidebar.close .profile-details .profile_name,
-  .sidebar.close .profile-details .job {
-    display: none;
-  }
-  .sidebar .profile-details .job {
-    font-size: 12px;
-  }
-  .home-section {
-    position: relative;
-    background: #e4e9f7;
-    height: 100vh;
-    left: 260px;
-    width: calc(100% - 260px);
-    transition: all 0.5s ease;
-  }
-  .sidebar.close ~ .home-section {
-    left: 78px;
-    width: calc(100% - 78px);
-  }
-  .home-section .home-content {
-    height: 60px;
-    display: flex;
-    align-items: center;
-  }
-  .home-section .home-content .bx-menu,
-  .home-section .home-content .text {
-    color: #f06d03;
-    font-size: 35px;
-  }
-  .home-section .home-content .bx-menu {
-    margin: 0 15px;
-    cursor: pointer;
-  }
-  .home-section .home-content .text {
-    font-size: 26px;
-    font-weight: 600;
-  }
-  @media (max-width: 400px) {
-    .sidebar.close .nav-links li .sub-menu {
-      display: none;
-    }
-    .sidebar {
-      width: 78px;
-    }
-    .sidebar.close {
-      width: 0;
-    }
-    .home-section {
-      left: 78px;
-      width: calc(100% - 78px);
-      z-index: 100;
-    }
-    .sidebar.close ~ .home-section {
-      width: 100%;
-      left: 0;
-    }
-  }
+}
+.active  {
+  background-color: #f06d03;  color: #fff;
+}
+.active span {
   
+  color: #fff;
+}
+.active  i {
+  color: #fff;
+
+}
+
+.main-menu li {
+  position: relative;
+  display: block;
+  width: 250px;
+
+
+
+}
+
+.main-menu li>a {
+  position: relative;
+  width: 255px;
+  display: table;
+  border-collapse: collapse;
+  border-spacing: 0;
+  color: #8a8a8a;
+  font-size: 13px;
+  text-decoration: none;
+  -webkit-transform: translateZ(0) scale(1, 1);
+  -webkit-transition: all .14s linear;
+  transition: all .14s linear;
+  font-family: 'Strait', sans-serif;
+  border-top: 1px solid #f2f2f2;
+
+  /* text-shadow: 1px 1px 1px #fff; */
+}
+
+
+
+.main-menu .nav-icon {
+
+  position: relative;
+  display: table-cell;
+  width: 55px;
+  height: 36px;
+  text-align: center;
+  vertical-align: middle;
+  font-size: 18px;
+
+}
+
+.main-menu .nav-text {
+
+  position: relative;
+  display: table-cell;
+  vertical-align: middle;
+  width: 190px;
+  /* font-family: 'Capriola', sans-serif; */
+  /* font-family: 'Titillium Web', sans-serif; */
+}
+
+
+
+
+
+
+
+@font-face {
+  font-family: 'Titillium Web';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Titillium WebLight'), local('TitilliumWeb-Light'), url(http://themes.googleusercontent.com/static/fonts/titilliumweb/v2/anMUvcNT0H1YN4FII8wpr24bNCNEoFTpS2BTjF6FB5E.woff) format('woff');
+}
+
+
+/* .side-menu-bar:hover {
+  width: 50%;
+  margin-left: 0;
+  margin-right: -20%;
+
+} */
+
+/* side menu end  */
